syntax = "proto3";

package go.micro.srv.listen_exp_key;

service ListenExpKey{
//    rpc ListenCodeExp (SendPushMsgRequest) returns (SendPushMsgReply) {
//    }
}

